minor changes, fixed random weight init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,10 +40,11 @@ find_package(Thrust REQUIRED)
 set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
 
 # nvcc flags
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20
-                                       -gencode arch=compute_20,code=sm_21;
-                                       -std=c++11;)
-                                       #-gencode arch=compute_21,code=sm_21)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};#-gencode arch=compute_20,code=sm_20
+                                       #-gencode arch=compute_20,code=sm_21;
+                                       -gencode arch=compute_30,code=sm_30;
+                                       -std=c++11; 
+                                       --use_fast_math)
 
 add_subdirectory(${SRC})
 add_subdirectory(${SAMPLES})
@@ -51,15 +52,16 @@ add_subdirectory(${SAMPLES})
 # Build the library
 cuda_add_library(cuANN
                 ${SRC}/ann/ann.cu
+                ${SRC}/prg/prg.cu
                 )
 
 # Then we may build the samples
 
 # The commands below will compile a cuda executable
 # Use them to compile the SAMPLES
-#cuda_compile(ANN_O .cu)
+cuda_compile(MAIN_O ${SAMPLES}/main.cu)
 #cuda_compile(DRIVER_O driver.cu OPTIONS -G)
-#cuda_add_executable(driver ${HELPER_O} ${DRIVER_O})
 
+cuda_add_executable(main ${MAIN_O})
+target_link_libraries(main cuANN)
 # and Finally, define the install location
-
