--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(ann)
 add_subdirectory(prg)
 add_subdirectory(sigmoid)
+add_subdirectory(prop)
+add_subdirectory(sums)
