finished loading data from file, simple test with xor and abelone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,12 +39,10 @@ find_package(Thrust 1.7.2 REQUIRED)
 # What does this line do ?
 set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
 
-# nvcc flags
+# nvcc flags & C++ Flags - NOTE Optimisation can go here
 set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};#-gencode arch=compute_20,code=sm_20
                                        #-gencode arch=compute_20,code=sm_21;
-                                       -gencode arch=compute_30,code=sm_30;
-                                       -std=c++11; 
-                                       --use_fast_math)
+                                       -gencode arch=compute_30,code=sm_30;-std=c++11;-DVERBOSE;--use_fast_math)
 
 add_subdirectory(${SRC})
 add_subdirectory(${SAMPLES})
@@ -55,15 +53,16 @@ cuda_add_library(cuANN
                 ${SRC}/prg/prg.cu
                 ${SRC}/sigmoid/sigmoid.cu
                 ${SRC}/prop/prop.cu
+                ${SRC}/data/data.cu
                 )
 
 # Then we may build the samples
 
 # The commands below will compile a cuda executable
-# Use them to compile the SAMPLES
-cuda_compile(MAIN_O ${SAMPLES}/main.cu)
+cuda_compile(XOR_O ${SAMPLES}/xor.cu)
 #cuda_compile(DRIVER_O driver.cu OPTIONS -G)
 
-cuda_add_executable(main ${MAIN_O})
-target_link_libraries(main cuANN)
+cuda_add_executable(xor ${XOR_O})
+target_link_libraries(xor cuANN)
+
 # and Finally, define the install location
