--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(ann)
 add_subdirectory(prg)
-add_subdirectory(sigmoid)
+add_subdirectory(activation)
 add_subdirectory(prop)
 add_subdirectory(sums)
