--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(ann)
-add_subdirectory(prg)
 add_subdirectory(activation)
+add_subdirectory(ann)
+add_subdirectory(error)
+add_subdirectory(data)
+add_subdirectory(dim_find)
+add_subdirectory(prg)
 add_subdirectory(prop)
 add_subdirectory(sums)
