worked on delta error calculation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(activation)
 add_subdirectory(ann)
-add_subdirectory(error)
+add_subdirectory(delta)
 add_subdirectory(data)
 add_subdirectory(dim_find)
+add_subdirectory(error)
 add_subdirectory(prg)
 add_subdirectory(prop)
 add_subdirectory(sums)
