--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(ann)
 add_subdirectory(data)
 add_subdirectory(dim_find)
+add_subdirectory(helpers)
 add_subdirectory(kernel)
 add_subdirectory(trainer)
