--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};#-gencode arch=compute_20,code=sm_20
                                        -gencode arch=compute_30,code=sm_30;
                                        -std=c++11;
                                        #-DVERBOSE;
-                                       #-DNDEBUG;
-                                       #-O3;
+                                       -DNDEBUG;
+                                       -O3;
                                        -Xcompiler -fPIC;
                                        --use_fast_math;
                                        )
