--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(data)
 add_subdirectory(dim_find)
 add_subdirectory(helpers)
 add_subdirectory(kernel)
+add_subdirectory(pattern)
 add_subdirectory(trainer)
