--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,6 @@ add_subdirectory(data)
 add_subdirectory(dim_find)
 add_subdirectory(helpers)
 add_subdirectory(kernel)
+add_subdirectory(logistic)
 add_subdirectory(pattern)
 add_subdirectory(trainer)
